# ddPCM

./: .gitignore  CMakeLists.txt  Input.txt  Makefile  README.md  crambine_output.txt  ddXConfig.cmake.in  ddcosmo.f90  ddpcm_lib.f90  fmm_pcm.f90  fmm_pcm.ipynb  gmres.f  jacobi_diis.f90  main.f90  main_fmm.f90  mydx.f90  mydx.py  mydx2.py  mydx3.py  numgrad.f90  pcm_fmm.f90  pcm_fmm.ipynb  test_fmm.f90  test_fmm.ipynb  test_fmm_adj.f90  test_pcm_fmm.f90  test_pcm_fmm.ipynb  test_rank.py  test_rank2.py
.github/workflows/: build-matrix.yml  build.yml  build_mac.yml  build_ubuntu.yml  build_windows.yml  coverage_ubuntu.yml  install_ubuntu.yml  test_mac.yml  test_ubuntu.yml  valgrind.yml  valgrind_cachegrind.yml  valgrind_callgrind.yml  valgrind_drd.yml  valgrind_helgrind.yml  valgrind_massif.yml  valgrind_memcheck.yml
cmake/: testddXinstall.cmake
docs/: config.in
experiments/calibration_pmax/: 1ejg.inp  Makefile  plots.ipynb
experiments/calibration_pmax/dense/: 1ejg.10.out  1ejg.12.out  1ejg.6.out  1ejg.8.out  2mlt.10.out  2mlt.12.out  2mlt.6.out  2mlt.8.out  2mlt.inp  2mlt_monomer.10.out  2mlt_monomer.12.out  2mlt_monomer.6.out  2mlt_monomer.8.out  2mlt_monomer.inp  2rvd.10.out  2rvd.12.out  2rvd.6.out  2rvd.8.out  2rvd.inp  Makefile
experiments/calibration_pmax/fmm/: 1ejg.10.0.out  1ejg.10.10.out  1ejg.10.12.out  1ejg.10.15.out  1ejg.10.18.out  1ejg.10.2.out  1ejg.10.21.out  1ejg.10.24.out  1ejg.10.27.out  1ejg.10.30.out  1ejg.10.35.out  1ejg.10.4.out  1ejg.10.40.out  1ejg.10.6.out  1ejg.10.8.out  1ejg.12.0.out  1ejg.12.10.out  1ejg.12.12.out  1ejg.12.15.out  1ejg.12.18.out  1ejg.12.2.out  1ejg.12.21.out  1ejg.12.24.out  1ejg.12.27.out  1ejg.12.30.out  1ejg.12.35.out  1ejg.12.4.out  1ejg.12.40.out  1ejg.12.6.out  1ejg.12.8.out  1ejg.6.0.out  1ejg.6.10.out  1ejg.6.12.out  1ejg.6.15.out  1ejg.6.18.out  1ejg.6.2.out  1ejg.6.21.out  1ejg.6.24.out  1ejg.6.27.out  1ejg.6.30.out  (+201 more)
input_amber/: 1ejg.fmm  1ejg.out  2mlt.fmm  2mlt.out  2mlt_monomer.fmm  2mlt_monomer.out  2qho.fmm  2qho.inp  2qho.out  2qho_a.fmm  2qho_a.inp  2qho_a.out  2qho_ab.fmm  2qho_ab.inp  2qho_ab.out  2qho_abc.fmm  2qho_abc.inp  2qho_abc.out  2qho_abcd.fmm  2qho_abcd.inp  2qho_abcd.out  2rvd.fmm  2rvd.out  Input.txt.hdr  Makefile  plot.ipynb
input_amber/ddpcm_large/: 2gx2.inp  dhfr.inp  photo.inp  waterglobe.inp  waterhuge.inp
input_amber/epsinf/: 2qho.fmm  2rvd.fmm
input_amber/iterinf/: 1ejg.fmm  2mlt.fmm  2mlt_monomer.fmm  2qho.fmm  2qho_a.fmm  2qho_ab.fmm  2qho_abc.fmm  2qho_abcd.fmm  2rvd.fmm
input_amber/sas/: 1ejg.sas.fmm  1ejg.sas.inp  2gx2.sas.fmm  2gx2.sas.inp  2mlt.sas.fmm  2mlt.sas.inp  2mlt_monomer.sas.fmm  2mlt_monomer.sas.inp  2qho.sas.fmm  2qho.sas.inp  2qho_a.sas.fmm  2qho_a.sas.inp  2qho_ab.sas.fmm  2qho_ab.sas.inp  2qho_abc.sas.fmm  2qho_abc.sas.inp  2qho_abcd.sas.fmm  2qho_abcd.sas.inp  2rvd.sas.fmm  2rvd.sas.inp  dhfr.sas.fmm  dhfr.sas.inp  photo.sas.fmm  photo.sas.inp  waterglobe.sas.fmm  waterglobe.sas.inp  waterhuge.sas.fmm  waterhuge.sas.inp
mytests/: 101M.txt
src/: CMakeLists.txt  dd_core.f90  dd_cosmo.f90  dd_lpb.f90  dd_operators.f90  dd_pcm.f90  dd_solvers.f90  ddx.f90
tests/: CMakeLists.txt  Input.txt  dd_core.f90  dd_operators.f90  force.f90  main.f90  main_ddLPB.f90
